// ============================================================
// CarMate 目标 ER 图 — 精简版 v2（关系完整）
// 用法：整份复制 → https://dbdiagram.io/d 粘贴 → Export PNG
// 12 实体，22 条外键关系
// ============================================================

Table users {
  id int [pk, increment, note: '✅用户主表']
  username varchar(50) [unique, not null]
  phone varchar(11) [unique]
  email varchar(100) [unique]
  role varchar(10) [not null, note: 'user|admin']
  wechat_openid varchar(64) [unique]
  nickname varchar(64)
  created_at datetime
}

Table verification_codes {
  id int [pk, increment, note: '✅验证码']
  user_id int [ref: > users.id, note: '注册前可为空']
  target varchar(120) [not null, note: '逻辑关联 users.phone/email']
  code varchar(6) [not null]
  scene varchar(20) [not null]
  expires_at datetime [not null]
}

Table user_operation_logs {
  id int [pk, increment, note: '✅操作审计']
  user_id int [ref: > users.id]
  action varchar(40) [not null]
  success boolean
  ip_address varchar(45)
  created_at datetime
}

Table cameras {
  id int [pk, increment, note: '📋摄像头/RTSP']
  name varchar(100) [not null]
  rtsp_url varchar(500)
  location varchar(200)
  is_active boolean
}

Table media_assets {
  id int [pk, increment, note: '📋上传图片/视频']
  user_id int [ref: > users.id]
  file_name varchar(255) [not null]
  storage_path varchar(500) [not null]
  mime_type varchar(50)
  created_at datetime
}

Table tracking_sessions {
  session_id varchar(36) [pk, note: '📋UUID 追踪会话']
  user_id int [ref: > users.id]
  camera_id int [ref: > cameras.id]
  media_asset_id int [ref: > media_assets.id]
  module_type varchar(20) [not null, note: 'plate|police_gesture']
  status varchar(20)
  created_at datetime
}

Table vehicles {
  id int [pk, increment, note: '📋车辆档案/黑白名单']
  plate_no varchar(20) [unique, not null]
  is_watchlist boolean [default: false]
  owner_name varchar(100)
}

Table history_records {
  id int [pk, increment, note: '✅识别历史主表']
  user_id int [ref: > users.id]
  session_id varchar(36) [ref: > tracking_sessions.session_id]
  media_asset_id int [ref: > media_assets.id]
  vehicle_id int [ref: > vehicles.id]
  type varchar(20) [not null, note: 'plate|police_gesture|driver_gesture']
  image_url varchar(500)
  result_json text
  created_at datetime
}

Table recognition_records {
  id int [pk, increment, note: '✅识别摘要']
  history_record_id int [ref: - history_records.id, unique, note: '📋1对1']
  user_id int [ref: > users.id, note: '冗余，便于查询']
  type varchar(20) [not null]
  result_summary varchar(255)
  confidence float
  success boolean
  created_at datetime
}

Table police_gesture_logs {
  id int [pk, increment, note: '⚠️交警手势专项日志']
  user_id int [ref: > users.id, note: '📋规划']
  history_record_id int [ref: > history_records.id, note: '📋规划']
  video_session_id varchar(36) [ref: > tracking_sessions.session_id]
  media_asset_id int [ref: > media_assets.id]
  gesture varchar(32) [not null]
  gesture_id int [not null]
  confidence float
  segments_json text
  created_at datetime
}

Table alert_rules {
  id int [pk, increment, note: '📋告警规则']
  name varchar(100) [not null]
  module varchar(30) [note: '逻辑对应 history_records.type']
  level varchar(20)
  enabled boolean
}

Table alert_records {
  id int [pk, increment, note: '✅告警记录']
  rule_id int [ref: > alert_rules.id]
  vehicle_id int [ref: > vehicles.id]
  history_record_id int [ref: > history_records.id]
  session_id varchar(36) [ref: > tracking_sessions.session_id]
  acknowledged_by int [ref: > users.id]
  level varchar(20) [not null]
  title varchar(200) [not null]
  source varchar(100)
  acknowledged boolean
  created_at datetime
}
